--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.3.3",
     "mysql2": "^3.9.7",
     "pug": "^3.0.2",
     "sequelize": "^6.37.3"
