--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "csurf": "^1.11.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
@@ -27,6 +28,7 @@
     "mongoose": "^8.3.3",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
+    "nodemailer-mailjet-transport": "^1.0.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2",
     "sequelize": "^6.37.3"
