--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "express-validator": "^7.0.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
     "nodemailer-mailjet-transport": "^1.0.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.15.0",
     "pug": "^3.0.2",
     "sequelize": "^6.37.3"
   }
